# bachelor-thesis

./: README.md  bachelor-thesis.cabal  bioinf-align-free-graphical.cabal  codons.json  hie.yaml  result.tsv
src/: BioSequences.hs  CmdLine.hs  Codons.hs  Descriptors.hs  FastaParser.hs  Main.hs  Math.hs  Metrics.hs  TsvSerializer.hs  Vec2.hs
