cabal-version: >=1.10
name: bachelor-thesis
version: 0.1.0.0
build-type: Simple
extra-source-files:
    CHANGELOG.md
    README.md

executable bachelor-thesis
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules:
        FastaParser,
        Vec2,
        Math,
        Descriptors
    build-depends:
        base >=4.12 && <4.13,
        aeson -any,
        bytestring -any,
        directory -any,
        word8 -any,
        attoparsec -any
